Implemented Observer pattern in Sockets for realtime updates (and deleted old Observer pattern). Fixed a bug in the object Auction where ReentrantLock is NOT Serializable (opted for synchronized instead).